@@ -1,3 +1,11 @@
+Mon Jul 25 23:51:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* backport r32671 from trunk.
+
+	* proc.c: pre-allocate the unlinked_method_entry_list_entry struct to
+	  avoid memory allocation during GC.  based on a patch from Eric Wong.
+	  [ruby-core:38498]
+
 Mon Jul 25 22:36:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* backport r32669 from trunk.
